# Dev

./: .credentials.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.db  env.bat  init.py  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
Python/: 1043. Partition Array for Maximum Sum.py  76. Minimum Window Substring.py  LRU Cache miss.txt  Problem Solving with Algorithms and Data Structures using Python — Problem Solving with Algorithms and Data Structures.url  balanced_parantheses.txt  dp_fibo_btmup_topdwn.txt  flight_movie_sum.txt  list_in_list_sort_key_lambda.txt  min_temp_vacation_days.txt  score_rank_cutoff.txt
airflow/: docker-compose.yaml
coding/: 6_1_backtrack_brute_force.py
docs/: help.md
fastapi_dev/: main.py  universities.py
fastapi_dev/sql_app/: models.py  repositories.py
grok/: binary_search.py  quicksort.py  timsort.py
leet/: 111.py  451. Sort Characters By Frequency.py
leet/array/: 189. Rotate Array.py  (+9 more)
lib/: base.py
python/: SqlAlchemy.py  TimeComplexity - Python Wiki.url  deque_doc_py.txt  dynamic_prog_minimum_coins.txt  heapq_doc_py.txt  leet.py  min_container_sum_sub_array.txt  most_common_elem.txt  nearest_city.txt  recurssion.py  squared_shortest_dist.txt  string_with_banned_words.txt  treasure_island2_multi-treasure.txt  treasure_island_bfs.txt  unique_filenames.txt
redis/: redis_cache.py  setmeup.py
tek_dev/: Inventory_0509.csv  UKReorderListCk.csv  UK_TopSell.csv  UK_TopSell_Updated.csv  evv.plantuml  main.py  microsrv.plantuml  result.csv  test.py
(+8 files in other folders)
